<resources>
    <!-- Labels -->
    <string name="label_app">Air Purrr</string>
    <string name="label_settings">Settings</string>


    <!-- Login screen -->
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_fingerprint_text">Authenticate with your fingerprint</string>
    <string name="login_description_fingerprint_icon">Fingerprint icon</string>
    <string name="login_description_logo">Application logo</string>
    <string name="login_pref_email">login_email</string>
    <string name="login_pref_password">login_password</string>

    <string name="login_message_dialog">Authenticating…</string>
    <string name="login_message_error_empty_field">Required</string>
    <string name="login_message_error_auth">Authentication error!</string>
    <string name="login_message_error_no_internet">No Internet connection!</string>
    <string name="login_message_error_no_secure_screen">You need lock screen secured to continue</string>
    <string name="login_message_error_no_saved_fingerprint">You need at least one fingerprint registered to continue</string>


    <!-- Main screen -->
    <string name="main_tab_current">Current</string>
    <string name="main_tab_forecast">Forecast</string>

    <string name="main_data_percentage">%.1f%%</string>
    <string name="main_data_ugm3">(%.1f)</string>
    <string name="main_data_info_pm25">PM2.5</string>
    <string name="main_data_info_pm10">PM10</string>
    <string name="main_data_info_indoors">Indoors</string>
    <string name="main_data_info_api">API</string>
    <string name="main_data_info_api_empty">no data</string>
    <string name="main_data_description_logo">Airly logo</string>

    <string name="main_message_turn_on">Processing the request…</string>
    <string name="main_message_error">Detector error occurred</string>
    <string name="main_message_error_measuring">Cannot process the request - detector in measuring mode</string>
    <string name="main_message_error_server">Server isn\'t responding, try again later</string>


    <!-- Menu -->
    <string name="mnu_manual_mode">Control fan manually</string>
    <string name="mnu_settings">Settings</string>


    <!-- Settings -->
    <string name="settings_category_auto_mode">Automatic mode</string>
    <string name="settings_category_fan_control">Performance</string>

    <string name="settings_title_auto_mode">Enable self-purifying</string>
    <string name="settings_title_threshold">Set threshold</string>
    <string name="settings_title_fan_speed">Fan speed</string>

    <string name="settings_summary_auto_mode_off">Auto mode stopped</string>
    <string name="settings_summary_auto_mode_on">Auto mode currently running</string>
    <string name="settings_summary_fan_speed">Set purifier speed from 1000 to 2000RPM</string>

    <string name="settings_dialog_title_threshold">Enter a value in percentage</string>
    <string name="settings_dialog_no_data">Not set</string>
</resources>
