<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_auto_mode" />

    <SwitchPreferenceCompat
        app:key="autoModeSwitch"
        app:title="@string/settings_title_auto_mode"
        app:summaryOff="@string/settings_summary_auto_mode_off"
        app:summaryOn="@string/settings_summary_auto_mode_on" />

    <EditTextPreference
        app:key="autoModeThreshold"
        app:useSimpleSummaryProvider="true"
        app:title="@string/settings_title_threshold"
        app:dialogTitle="@string/settings_dialog_title_threshold" />

    <PreferenceCategory app:title="@string/settings_category_fan_control" />

    <SeekBarPreference
        android:defaultValue="1800"
        android:max="2000"
        app:key="fanSpeedRpm"
        app:min="1000"
        app:showSeekBarValue="true"
        app:updatesContinuously="true"
        app:title="@string/settings_title_fan_speed"
        app:summary="@string/settings_summary_fan_speed" />

</androidx.preference.PreferenceScreen>